# TP2

./: .gitignore  EVIDENCIAS.md  EVIDENCIAS14.md  METRICAS_CALIDAD14.md  PRESENTACION14.md  README.md  sonar-project.properties
backend/: .coverage  .env  pyproject.toml
backend/latest_logs/test_api_docs.TestBackendDocs.test_navigation_to_redoc/: basic_test_info.txt  page_source.html
backend/latest_logs/test_api_docs.TestBackendDocs.test_swagger_docs_load/: basic_test_info.txt  page_source.html
backend/src/: app.py
backend/src/apis/: __init__.py  aula_api.py  auth_api.py  carrera_api.py  curso_api.py  docente_api.py  estudiante_api.py  horario_api.py  matricula_api.py  sustainability.py
backend/src/config/: database.py  middleware.py
backend/src/repositories/: __init__.py  aula_repository.py  carrera_repository.py  curso_repository.py  docente_repository.py  estudiante_repository.py  horario_repository.py  matricula_repository.py  metrics_repository.py
backend/src/schemas/: __init__.py  aula.py  carrera.py  curso.py  docente.py  estudiante.py  horario.py  matricula.py  response.py
backend/src/services/: __init__.py  aula_service.py  (+5 more)
backend/tests/: __init__.py  test_app_and_sustainability.py  test_aula_service.py  test_auth_api.py  test_curso_service.py  test_estudiante_service.py  test_estudiantes_api.py  test_horario_repository.py  test_horario_repository_full.py  test_horario_service.py  test_integration_missing_apis.py  test_matricula_repository.py  test_matricula_service.py  test_matriculas_api.py  test_repositories_bulk.py  test_sustainability.py
(+73 files in other folders)
