[project]
name = "backend"
version = "0.1.0"
description = "Sistema de Gestión Académica"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "seleniumbase>=4.48.2",
    "webdriver-manager>=4.0.2",
    "ortools>=9.15.6755",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Pruebas unitarias",
    "integration: Pruebas de integración",
    "e2e: Pruebas end-to-end",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__pycache__/*", "tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.coverage.html]
directory = "htmlcov"
